fix: restore Java 8 compatibility for streams and arrays